Osa 3. Viides tehtävä

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-  <!--Tee tehtävät tänne -->
 <h1>Seitsemän veljestä</h1>
-<h2>Tärkeät päähenkilöt</h2>
+  <!--Seuraava kuva esittää Seitsemän veljestä -kirjan ensimmäistä sivua.-->
+<img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Seitsem%C3%A4n_veljest%C3%A4.png" alt="Seisemän veljestä -kirjan ensimmäinen sivu" height="450" width="300"/>
+<h2>Tärkeät henkilöt</h2>
 <ul>
   <li>Päähenkilöt</li>
   <ul>
