Osa 3. Kahdeksas tehtävä

--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 </head>
 
 <body>
-<h1>Seitsemän veljestä</h1>
+<h1 {color:blue;}>Seitsemän veljestä</h1>
   <!--Seuraava kuva esittää Seitsemän veljestä -kirjan ensimmäistä sivua.-->
 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Seitsem%C3%A4n_veljest%C3%A4.png" alt="Seisemän veljestä -kirjan ensimmäinen sivu" height="450" width="300"/>
 <h2>Tärkeät henkilöt</h2>
 <ul>
-  <li>Päähenkilöt</li>
-  <ul>
-    <li>Juhani</li>
-    <li>Tuomas</li>
-    <li>Aapo</li>
-    <li>Simeoni</li>
-    <li>Timo</li>
-    <li>Lauri</li>
-    <li>Eero</li>
+  <li class="henkilöt">Päähenkilöt</li>
+  <ul class="henkilöt">
+    <li class="henkilöt">Juhani</li>
+    <li class="henkilöt">Tuomas</li>
+    <li class="henkilöt">Aapo</li>
+    <li class="henkilöt">Simeoni</li>
+    <li class="henkilöt">Timo</li>
+    <li class="henkilöt">Lauri</li>
+    <li class="henkilöt">Eero</li>
   </ul>
-  <li>Sivuhenkilöt</li>
-  <ul>
-    <li>Männistön Venla</li>
-    <li>Lukkari</li>
-    <li>Tammiston Kyösti</li>
+  <li class="henkilöt">Sivuhenkilöt</li>
+  <ul class="henkilöt">
+    <li class="henkilöt">Männistön Venla</li>
+    <li class="henkilöt">Lukkari</li>
+    <li class="henkilöt">Tammiston Kyösti</li>
   </ul>
 </ul>
 <h3>Ensimmäinen luku</h3>
@@ -37,7 +37,7 @@
 <p>
   Sen läheisin ympäristö on kivinen tanner, mutta alempana alkaa pellot, joissa, ennenkuin talo oli häviöön mennyt, aaltoili teräinen vilja.
 </p>
-<em>jatkuu..</em>
+<em class="henkilöt" id="punainen-kohta">jatkuu..</em>
 </body>
 
 </html>
